--- a/Agent48.html
+++ b/Agent48.html
@@ -20,7 +20,7 @@ Agent 48 is fat
 
 
 
-<img src="C:\Users\rasan\Downloads\agent baldi.jpg" width="500px" height="310px">
+<img src="agent baldi.jpg" width="500px" height="310px">
 
 
 
