--- a/agent47.html
+++ b/agent47.html
@@ -12,6 +12,6 @@
 				<center>
 			</h1>
 			<p>Agent47 is cool</p>
-			<img src="C:\Users\rasan\Downloads\hitman.jpg" width="500px" height="310px">
+			<img src="hitman.jpg" width="500px" height="310px">
 		</body>
 	</html>
