--- a/index.html
+++ b/index.html
@@ -6,27 +6,53 @@
 <title>
 Agent47
 </title>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
+
+<style>
+
+	body{
+		background-color: firebrick;
+		font-family: "Audiowide", sans-serif;
+
+	}
+
+	.baldi{
+		background-color:black;
+		color:white;
+		padding:5px;
+		margin:50px;
+		width:fit-content;
+	}
+	a{
+	 text-decoration: none;
+	 color:firebrick;
+	}
+	.baldi:hover{
+		background-color:white;
+		border:1px solid black;
+		width:500px;
+
+	}
+
+</style>
 </head>
 
 <body>
 <h1> 
 <center>
-Agent website 
+AGENT WEBSITE 
 <center>
 </h1>
-
 <center>
-
 <a href="https://hitman.com/global/">
 	<img src="logo.png" height="50px">
 </a>
+<div class="baldi"><a href="agent47.html">Bald 47</a></div>
+<div class="baldi"><a href="agent48.html">Fat 48</a></div>
+<div class="baldi"><a href="agent47.html">Tall 49</a></div>
 
 
-<ul>
-<li><a href="agent47.html">47.bald</a></li>
-<li><a href="Agent48.html">48.fat</a></li>
-<li><a href="Agent49.html">49.tall</a></li>
-</ul>
+
 </center>
 
 
